# stable-diffusion-videos

./: .gitignore  README.md  app.py  cog.yaml  download_weights.py  flax_stable_diffusion_videos.ipynb  packages.txt  predict.py  pyproject.toml  requirements.txt  setup.py  stable_diffusion_pipeline.py  stable_diffusion_videos.ipynb  stable_diffusion_walk.py  test.py
.github/workflows/: python-publish.yml
examples/: make_music_video.py  run_app.py  run_music_video_app.py
scripts/: download_weights.py  make_video.py
stable_diffusion_videos/: __init__.py  app.py  devices.py  flax_stable_diffusion_pipeline.py  image_generation.py  stable_diffusion_pipeline.py  stable_diffusion_walk.py  upsampling.py  utils.py
tests/: test_pipeline.py
